Probably fix issue of overflow scrolling of table of contents on iPhone.

--- a/app/assets/stylesheets/_toc.scss
+++ b/app/assets/stylesheets/_toc.scss
@@ -89,6 +89,7 @@
     }
 
     &__wrapper {
+      -webkit-overflow-scrolling: touch;
       overflow-x: hidden;
       overflow-y: auto;
 
